--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -23,7 +23,7 @@ const { page, uniqueTags } = Astro.props;
 
 const meta = {
 	description: "Ready my collection of posts and the things that interest me",
-	title: "Posts",
+	title: "Writings",
 };
 
 const paginationProps = {
