--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import PageLayout from "@/layouts/Base.astro";
 // import { Image } from "astro:assets";
 
 const meta = {
-	description: "I'm a starter theme for Astro.build",
+	description: "Personal blog of Eray",
 	title: "About",
 };
 ---
@@ -12,15 +12,22 @@ const meta = {
 <PageLayout meta={meta}>
 	<div class="space-y-6">
 		<h1 class="title">About</h1>
-		<p>
-			I am currently working as a Research Engineer at <a href="https://semiotic.ai/"
-				>Semiotic Labs</a
-			> where I am a core developer of <a href="https://thegraph.com/">The Graph Protocol</a>.
-			Before that, I was an MEV searcher and consultant and also participated in the Contributor
+		<h1 class="title mb-6">Hi, I'm Eray!</h1>
+		<p class="mb-4">
+			I am currently working as a Research Engineer at <a
+				href="https://semiotic.ai/"
+				style="color:#bb3a46">Semiotic Labs</a
+			> where I am a core developer of <a href="https://thegraph.com/" style="color:#bb3a46"
+				>The Graph Protocol</a
+			>. Before that, I was an MEV searcher and consultant and also participated in the Contributor
 			Programs at Ethereum Foundation's <a
 				href="https://efdn.notion.site/Robust-Incentives-Group-RIG-Homepage-802339956f2745a5964d8461c5ccef02"
-				>RIG team</a
-			> and <a href="https://github.com/privacy-scaling-explorations">PSE team</a>.
+				style="color:#bb3a46">RIG team</a
+			> and <a href="https://github.com/privacy-scaling-explorations" style="color:#bb3a46"
+				>PSE team</a
+			>. For more detailed information, please see <a href="/about" style="color:#bb3a46">About </a>
+			page.
+		</p>
 			<ul class="list-inside list-disc">
 				<li>
 					My research interests are Mechanism design, Cryptoeconomic Security, MEV, Proof of Stake,
@@ -39,7 +46,7 @@ const meta = {
 				</li>
 				<li>
 					Holds an MSc in CS at NTNU <a href="https://www.ntnu.edu/paasforchain">Blockchain Lab</a> and
-					a BSc in Financial Engineering.
+					a BSc in Systems Engineering and OR.
 				</li>
 			</ul>
 		</p>
