--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,7 +46,7 @@ const meta = {
 				</li>
 				<li>
 					Holds an MSc in CS at NTNU <a href="https://www.ntnu.edu/paasforchain">Blockchain Lab</a> and
-					a BSc in Systems Engineering and OR.
+					a BSc in Systems Engineering.
 				</li>
 			</ul>
 		</p>
