--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,9 +24,7 @@ const meta = {
 				href="https://efdn.notion.site/Robust-Incentives-Group-RIG-Homepage-802339956f2745a5964d8461c5ccef02"
 				style="color:#bb3a46">RIG team</a
 			> and <a href="https://github.com/privacy-scaling-explorations" style="color:#bb3a46"
-				>PSE team</a
-			>. For more detailed information, please see <a href="/about" style="color:#bb3a46">About </a>
-			page.
+				>PSE team</a>.
 		</p>
 			<ul class="list-inside list-disc">
 				<li>
