--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,12 +20,12 @@ const cactusTech: { desc: string; href: string; title: string }[] = [
 	},
 	{
 		desc: "Allowing mev actors to issue bids and commitments for execution.",
-		href: "https://www.markdownguide.org/",
+		href: "https://github.com/primevprotocol/mev-commit/",
 		title: "mev-commit",
 	},
 	{
 		desc: "Ensuring no data is skipped in verifiable queries.",
-		href: "https://mdxjs.com/",
+		href: "https://github.com/semiotic-ai/risc0-verifiabilty/",
 		title: "Product Tree Queries",
 	},
 ];
