--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 	<div style="display: flex; justify-content: space-between; align-items: center;">
 	  <p>By <a href="/">Eray</a></p>
 	  <div style="display: flex; align-items: center;">
-		<a href="https://warpcast.com/eray" style="margin-right: 10px;">X</a>
-		<a href="https://x.com/erayajk" style="margin-right: 10px;">Farcaster</a>
+		<a href="https://x.com/erayajk" style="margin-right: 10px;">X</a>
+		<a href="https://warpcast.com/eray" style="margin-right: 10px;">Farcaster</a>
 		<a href="https://www.github.com/erayack/" style="margin-right: 10px;">Github</a>
 		<a href="https://www.linkedin.com/in/erayack/" style="margin-right: 10px;">LinkedIn</a>
 		<a href="mailto:erayackgoz@hotmail.com">Mail</a>
