--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,9 +1,9 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src=""></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q4Z8XT16N3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-154465690-1');
+  gtag('config', 'G-Q4Z8XT16N3');
 </script>
