--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="{{ page.description }}">
-	<meta name="author" content="Mark Qi">
+	<meta name="author" content="Eray Ack">
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="/assets/menu-favicon.ico"/>
 	
